--- a/MedPortal/wwwroot/css/site.css
+++ b/MedPortal/wwwroot/css/site.css
@@ -158,3 +158,15 @@ input.searchInput::placeholder {
 .a asp-page{
     text-decoration: none;
 }
+.column {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    justify-content: space-between;
+}
+
+.container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
