--- a/MedPortal/Pages/CreatedHospital.cshtml
+++ b/MedPortal/Pages/CreatedHospital.cshtml
@@ -2,7 +2,7 @@
 @model MedPortal.Pages.CreatedHospitalModel
 @{
 }
-<form method="post" id="createHomeForm" enctype="multipart/form-data">
+<form method="post" id="createHospitalForm" enctype="multipart/form-data">
     <div class="container">
         <div class="column">
             <label>Название: </label>
