--- a/MedPortal/Pages/Doctors.cshtml
+++ b/MedPortal/Pages/Doctors.cshtml
@@ -2,3 +2,16 @@
 @model MedPortal.Pages.DoctorsModel
 @{
 }
+<a asp-page="CreateDoctors" style="text-decoration:none;"> Add Doctors </a>
+@* <div class="hospis-grid">
+    @foreach (Hospitals hospital in Model.Doctors)
+    {
+        <div class="hospis-card">
+            <p>Название: @hospital.Name</p>
+            <p>Тип: @hospital.Type</p>
+            <p>Адрес: @hospital.Adress</p>
+            <p>Специализация: @hospital.Direction</p>
+            <a asp-page="Registration" style="text-decoration:none;"> Записаться </a>
+        </div>
+    }
+ *@
