--- a/MedPortal/wwwroot/css/site.css
+++ b/MedPortal/wwwroot/css/site.css
@@ -170,3 +170,18 @@ input.searchInput::placeholder {
     flex-direction: row;
     justify-content: space-around;
 }
+
+.hospis-grid {
+    display: grid;
+    grid-template-columns: 400px 400px 400px;
+    width: 80%;
+}
+
+.hospis-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: lightblue;
+    border-radius: 10px;
+    padding: 5px;
+}
