--- a/MedPortal/Pages/CreateDoctors.cshtml
+++ b/MedPortal/Pages/CreateDoctors.cshtml
@@ -9,7 +9,7 @@
             <label>Фамилия: </label>
             <label>Специализация: </label>
             <label>Опыт: </label>
-            <label>Образования</label>
+            <label>Образование</label>
             <label>Больница</label>
 
         </div>
@@ -19,12 +19,13 @@
             <input type="text" name="Specialization" />
             <input type="text" name="Experience" />
             <input type="text" name="Education" />
-            <select name="HospitalId" id="hospital">
+            <select name="HospitalsID">
                 <option value="">Please choose an hospitals</option>
+
                 @foreach (Hospitals hospital in Model.Hospitals)
 
                 {
-                    <option value="Hospital"> </option>
+                    <option value=@hospital.Id> @hospital.Name </option>
                 }
              </select>
         </div>
