--- a/MedPortal/Pages/Doctors.cshtml
+++ b/MedPortal/Pages/Doctors.cshtml
@@ -3,15 +3,18 @@
 @{
 }
 <a asp-page="CreateDoctors" style="text-decoration:none;"> Add Doctors </a>
-@* <div class="hospis-grid">
-    @foreach (Hospitals hospital in Model.Doctors)
+<div class="hospis-grid">
+
+    @foreach (Doctors doct in Model.Doctors)
     {
         <div class="hospis-card">
-            <p>Название: @hospital.Name</p>
-            <p>Тип: @hospital.Type</p>
-            <p>Адрес: @hospital.Adress</p>
-            <p>Специализация: @hospital.Direction</p>
+            <p>Название: @doct.FirstName</p>
+            <p>Тип: @doct.LastName</p>
+            <p>Адрес: @doct.Specialization</p>
+            <p>Специализация: @doct.Experience</p>
+            <p>Больница: @doct.Hospitals?.Name</p>
+            <p>Адрес: @doct.Hospitals?.Adress</p>
             <a asp-page="Registration" style="text-decoration:none;"> Записаться </a>
         </div>
-    }
- *@
+   }
+</div>
