--- a/MedPortal/Pages/Hospitals.cshtml
+++ b/MedPortal/Pages/Hospitals.cshtml
@@ -3,15 +3,21 @@
 @{
 }
 <a asp-page="CreatedHospital" style="text-decoration:none;"> Add Hospital </a>
-<div class="hospis-grid">
-    @foreach (Hospitals hospital in Model.Hospitals)
-    {
-        <div class="hospis-card">
-            <p>Название: @hospital.Name</p>
-            <p>Тип: @hospital.Type</p>
-            <p>Адрес: @hospital.Adress</p>
-            <p>Специализация: @hospital.Direction</p>
-            <a asp-page="Registration" style="text-decoration:none;"> Записаться </a>
-        </div>
-    }
 
+<div class="container marketing">
+    <div class="row">
+        @foreach (Hospitals hospital in Model.Hospitals)
+        {
+            <div class="col-lg-4">
+                <img src="~/img/350.jpg" width="100" height="100" />
+                <h2> @hospital.Name</h2>
+                <p>
+                    Тип: @hospital.Type
+                    <br>Адрес: @hospital.Adress
+                    <br>Специализация: @hospital.Direction
+                    <br> <a asp-page="Registration" class="btn btn-block btn-primary"> Записаться </a>
+                </p>
+            </div>
+        }
+    </div>
+</div>
