--- a/MedPortal/wwwroot/css/site.css
+++ b/MedPortal/wwwroot/css/site.css
@@ -1,20 +1,16 @@
-html {
-  font-size: 14px;
+\html {
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
@@ -155,20 +151,9 @@ input.searchInput::placeholder {
         right: 250px;
     }
 }
-.a asp-page{
-    text-decoration: none;
-}
-.column {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    justify-content: space-between;
-}
 
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+.a asp-page {
+    text-decoration: none;
 }
 
 .hospis-grid {
@@ -184,4 +169,95 @@ input.searchInput::placeholder {
     background-color: lightblue;
     border-radius: 10px;
     padding: 5px;
+}
+
+.form-width {
+    max-width: 25rem;
+}
+
+.has-float-label {
+    position: relative;
+}
+
+    .has-float-label label {
+        position: absolute;
+        left: 0;
+        top: 0;
+        cursor: text;
+        font-size: 75%;
+        opacity: 1;
+        -webkit-transition: all .2s;
+        transition: all .2s;
+        top: -.5em;
+        left: 0.75rem;
+        z-index: 3;
+        line-height: 1;
+        padding: 0 1px;
+    }
+
+        .has-float-label label::after {
+            content: " ";
+            display: block;
+            position: absolute;
+            background: white;
+            height: 2px;
+            top: 50%;
+            left: -.2em;
+            right: -.2em;
+            z-index: -1;
+        }
+
+    .has-float-label .form-control::-webkit-input-placeholder {
+        opacity: 1;
+        -webkit-transition: all .2s;
+        transition: all .2s;
+    }
+
+    .has-float-label .form-control:placeholder-shown:not(:focus)::-webkit-input-placeholder {
+        opacity: 0;
+    }
+
+    .has-float-label .form-control:placeholder-shown:not(:focus) + label {
+        font-size: 100%;
+        opacity: .5;
+        top: .3em;
+    }
+
+.input-group .has-float-label {
+    display: table-cell;
+}
+
+    .input-group .has-float-label .form-control {
+        border-radius: 0.25rem;
+    }
+
+    .input-group .has-float-label:not(:last-child) .form-control {
+        border-bottom-right-radius: 0;
+        border-top-right-radius: 0;
+    }
+
+    .input-group .has-float-label:not(:first-child) .form-control {
+        border-bottom-left-radius: 0;
+        border-top-left-radius: 0;
+        margin-left: -1px;
+    }
+
+body {
+    padding-bottom: 3rem;
+    color: #5a5a5a;
+}
+
+
+.marketing .col-lg-4 {
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+
+.marketing h2 {
+    font-size: 1.5em;
+}
+
+.marketing .col-lg-4 p {
+    margin-right: .75rem;
+    margin-left: .75rem;
 }
