--- a/MedPortal/Pages/Index.cshtml
+++ b/MedPortal/Pages/Index.cshtml
@@ -6,4 +6,41 @@
 
 <div class="text-center">
     <h1 class="display-4">Страница медицинского портала</h1>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" />
+    <div class="p-x-1 p-y-3">
+        <form class="card card-block m-x-auto bg-faded form-width" method="post" id="createSpecializationForm" enctype="multipart/form-data">
+            <legend class="m-b-1 text-xs-center">Найти человека</legend>
+            <div class="form-group input-group">
+                <span class="has-float-label">
+                    <input class="form-control" id="first" type="text" placeholder="Найти" name="search" />
+                    <label for="first">Специальность</label>
+                </span>
+            </div>
+            <div class="text-xs-center">
+                <button class="btn btn-block btn-primary" type="submit">Добавить</button>
+            </div>
+        </form>
+    </div>
 </div>
+
+<link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/">
+
+<div class="container marketing">
+    <div class="row">
+        @foreach (User us in Model.Users)
+        {
+            <div class="col-lg-4">
+                <img src="~/img/350.jpg" class="rounded-circle" width="100" height="100" />
+                <h2>@us.SurName
+                    @us.Name</h2>
+                <p>
+                     Пол: @us.Gender
+                    <br> @us.PassportSerial    @us.PassportNumber
+                    <br> @us.Phone
+                <p> <a asp-page="Registration" class="btn btn-block btn-primary"> Записаться </a></p>
+            </div>
+        }
+    </div>
+</div>
+
