--- a/MedPortal/Pages/Hospitals.cshtml
+++ b/MedPortal/Pages/Hospitals.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container marketing">
     <div class="row">
-        @foreach (Hospitals hospital in Model.Hospitals)
+        @foreach (Hospital hospital in Model.Hospitals)
         {
             <div class="col-lg-4">
                 <img src="~/img/350.jpg" width="100" height="100" />
