--- a/MedPortal/Pages/CreateSpecialization.cshtml
+++ b/MedPortal/Pages/CreateSpecialization.cshtml
@@ -9,7 +9,7 @@
         <legend class="m-b-1 text-xs-center">Добавить специальность</legend>
         <div class="form-group input-group">
             <span class="has-float-label">
-                <input class="form-control" id="first" type="text" placeholder="Найти" name="search" />
+                <input class="form-control" id="first" type="text" placeholder="Найти" name="Name" />
                 <label for="first">Специальность</label>
             </span>
         </div>
