--- a/MedPortal/Pages/Login.cshtml
+++ b/MedPortal/Pages/Login.cshtml
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" />
     <div class="p-x-1 p-y-3">
         <form class="card card-block m-x-auto bg-faded form-width" method="post" id="LoginGorm" enctype="multipart/form-data">
-            <legend class="m-b-1 text-xs-center">Войти</legend>
+            <legend class="m-b-1 text-xs-center">Login</legend>
             <div class="form-group input-group">
                 <span class="has-float-label">
                     <input class="form-control" id="first" type="text" placeholder="Имя" name="Name" />
@@ -13,7 +13,7 @@
                 </span>
             </div>
             <div class="text-xs-center">
-                <button class="btn btn-block btn-primary" type="submit">Добавить</button>
+                <button class="btn btn-block btn-primary" type="submit">Войти</button>
             </div>
         </form>
     </div>
