--- a/MedPortal/Pages/Index.cshtml
+++ b/MedPortal/Pages/Index.cshtml
@@ -15,10 +15,49 @@
     else
     {
         <a asp-page="Login">Войти</a>
-      
+        //<a href="/logout">Выйти</a> 
     }
-    <a href="/logout">Выйти</a>
-}
+ }
+<main class="container">
+    <div class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+    <div class="col-md-6 px-0">
+      <h1 class="display-4 fst-italic">Запишись на бесплатную диспансеризацию</h1>
+      <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+            <p class="lead mb-0"> <a asp-page="Registration" style="text-decoration:none;"> Записаться на прием...</a></p>
+    </div>
+  </div>
+
+  <div class="row mb-2">
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <h3 class="mb-0">Врачи</h3>
+          <div class="mb-1 text-muted">Nov 12</div>
+          <p class="card-text mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+        <img src="~/img/doctor.jpg" width="200" height="250"role="img">
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
+        <div class="col p-4 d-flex flex-column position-static">
+          <strong class="d-inline-block mb-2 text-success">Design</strong>
+          <h3 class="mb-0">Post title</h3>
+          <div class="mb-1 text-muted">Nov 11</div>
+          <p class="mb-auto">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="stretched-link">Continue reading</a>
+        </div>
+        <div class="col-auto d-none d-lg-block">
+           <img src="~/img/doctor2.jpg" width="200" height="250"  role="img">
+
+        </div>
+      </div>
+    </div>
+  </div>
+</main>
 
 @* <div class="text-center">
     <h1 class="display-4">Страница медицинского портала</h1>
