--- a/MedPortal/Pages/Registration.cshtml
+++ b/MedPortal/Pages/Registration.cshtml
@@ -9,10 +9,10 @@
             <div class="form-group input-group">
                 <span class="has-float-label">
                 <select class="form-control custom-select" id="first" name="UserId">
-                    @foreach (User us in Model.Users)
+                    @foreach (ServiceUser us in Model.ServiceUsers)
 
                     {
-                        <option value=@us.id> @us.Name    @us.SurName </option>
+                        <option value=@us.Id> @us.Name </option>
                     }
                 </select>
                     <label for="first">Имя</label>
@@ -32,7 +32,7 @@
             </div>
             <div class="form-group input-group">
                 <span class="has-float-label">
-                    <select class="form-control custom-select" id="doctor" name="DoctorId">
+                    <select class="form-control custom-select" id="doctor" name="DoctorsId">
                         @foreach (Doctors doct in Model.Doctors)
 
                         {
