--- a/MedPortal/Pages/Shared/_Layout.cshtml
+++ b/MedPortal/Pages/Shared/_Layout.cshtml
@@ -75,7 +75,8 @@
                     </ul>
                 </div>
                 <button id="loginBtn" class="btn btn-sm m-sm-2 m-1 bg-primary text-white rounded-5 px-sm-3 px-2">
-                    <img class="d-none d-lg-inline-block" src="~/img/icons8.png">
+                        <img class="d-none d-lg-inline-block" src="~/img/icons8.png">
+                        <a asp-page="Login" style="text-decoration:none;">Login</a>
                 </button>
             </div>
         </div>
@@ -83,27 +84,22 @@
     <nav id="secondNav" class="bottom-0 position-fixed end-0 start-0">
         <div class="d-lg-none">
             <div class="container-fluid d-flex justify-content-between shadow pt-2">
-                <a href="#" class="text-center text-decoration-none textColor">
-                    <div class="mb-1">
-                        <span class="bg-primary rounded-5 p-1 text-white">DB</span>
-                    </div>
-                    <div class="extraSmallFont active pb-1">Dbook</div>
+
+                <a asp-page="Hospitals" style="text-decoration:none;">
+                    <img class="iconHeight mb-1" alt="dpad" src="~/img/hospital.png">
+                    <div class="extraSmallFont pb-1">Hospitals</div>
                 </a>
-                <a href="#" class="text-decoration-none textColor  text-center">
-                    <img class="iconHeight mb-1" src="/static_files/svgs2/book.svg" alt="book">
-                    <div class="extraSmallFont pb-1">Book</div>
+                <a asp-page="Doctors" style="text-decoration:none;"> 
+                    <img class="iconHeight mb-1" src="~/img/stethoscope.png" alt="dpad">
+                    <div class="extraSmallFont pb-1">Doctors</div>
                 </a>
-                <a href="#" class="text-decoration-none textColor  text-center">
-                    <img class="iconHeight mb-1" src="/static_files/svgs2/dpad.svg" alt="dpad">
-                    <div class="extraSmallFont pb-1">Navigate</div>
+                <a asp-page="History" style="text-decoration:none;">
+                    <img class="iconHeight mb-1" src="~/img/hospit.png" alt="bar-chart">
+                    <div class="extraSmallFont pb-1">History of illnesses</div>
                 </a>
-                <a href="#" class="text-decoration-none textColor  text-center">
-                    <img class="iconHeight mb-1" src="/static_files/svgs2/bar-chart.svg" alt="bar-chart">
-                    <div class="extraSmallFont pb-1">Stats</div>
-                </a>
-                <a href="#" class="text-decoration-none textColor  text-center">
-                    <img class="iconHeight mb-1" src="/static_files/svgs2/lightbulb.svg" alt="lightbulb">
-                    <div class="extraSmallFont pb-1">Idea</div>
+                <a asp-page="Registration" style="text-decoration:none;">
+                    <img class="iconHeight mb-1" src="~/img/hospital-bed.png" alt="lightbulb">
+                    <div class="extraSmallFont pb-1">Make an appointment</div>
                 </a>
                 <a href="#" class="text-decoration-none textColor  text-center">
                     <img class="iconHeight mb-1" src="/static_files/svgs2/briefcase.svg" alt="briefcase">
