--- a/MedPortal/Pages/Registration.cshtml
+++ b/MedPortal/Pages/Registration.cshtml
@@ -1,4 +1,7 @@
 ﻿@page
+@using System.Security.Claims;
+@using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Forms
 @model MedPortal.Pages.RegistrationModel
 @{
 }
@@ -8,22 +11,11 @@
             <legend class="m-b-1 text-xs-center">Записаться на прием</legend>
             <div class="form-group input-group">
                 <span class="has-float-label">
-                <select class="form-control custom-select" id="first" name="UserId">
-                    @foreach (ServiceUser us in Model.ServiceUsers)
 
-                    {
-                        <option value=@us.Id> @us.Name </option>
-                    }
-                </select>
-                    <label for="first">Имя</label>
-                </span>
-            </div>
-            <div class="form-group input-group">
-                <span class="has-float-label">
                 <select class="form-control custom-select" id="hospis" name="HospitalId">
                         @foreach (Hospital hospital in Model.Hospitals)
-
                         {
+
                             <option value=@hospital.Id> @hospital.Name </option>
                         }
                     </select>
