--- a/MedPortal/Pages/Shared/_Layout.cshtml
+++ b/MedPortal/Pages/Shared/_Layout.cshtml
@@ -12,12 +12,12 @@
     <nav class="navbar align-items-center border-bottom">
         <div class="container-fluid">
             <div class="d-flex align-items-center ">
-                <a href="#" class="navbar-brand m-0 textColor fw-bold brand">MedPortal</a>
+                <a asp-page="Index" style="text-decoration:none;"> MedPortal </a>
                 <div id="verticalbar" class="mx-xxl-2 mx-1 d-none d-lg-inline-block"></div>
                 <a href="#" class="nav-link textColor fw-lighter lh-sm brandSubHeading d-none d-lg-inline-block">
                     Visitor
                     <br>
-                    <span class="fw-medium brandSubHeading d-none d-lg-inline-block">Medicine Portal</span>
+                    <span class="fw-medium brandSubHeading d-none d-lg-inline-block"> Medicine Portal</span>
                 </a>
             </div>
             <div class="d-flex align-items-center">
@@ -69,7 +69,9 @@
                                     <img class=" iconHeight mx-2" src="/static_files/svgs2/briefcase-fill.svg"
                                          alt="briefcase">
                                 </div>
-                                <div class="smallFont textColor">Career</div>
+                                <div class="smallFont textColor">
+                                    <a asp-page="DoctorLK" style="text-decoration:none;"> Im Doctor </a>
+                                </div>
                             </a>
                         </li>
                     </ul>
@@ -116,6 +118,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="_framework/blazor.server.js"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
